# cmake_producer_consumer

./: README.md  build.sh
consumer/: CMakeLists.txt
producer/: CMakeLists.txt  main.cpp  package_config.cmake.in
